# zen

./: CONTRIBUTING.md  Cargo.toml  PRD.md  README.md  progress.txt  readme
.github/workflows/: ci.yml  release.yml
.sop/planning/: idea-honing.md  rough-idea.md  summary.md
.sop/planning/design/: detailed-design.md
.sop/planning/implementation/: plan.md
.sop/planning/implementation/agent-handle/: context.md  plan.md  progress.md
.sop/planning/implementation/agent-id-status/: context.md  plan.md  progress.md
.sop/planning/implementation/agent-monitor-loop/: context.md  plan.md  progress.md
.sop/planning/research/: claude-code-integration.md  existing-code.md  rust-ecosystem.md  skills-integration.md
docs/: actors.md  animation-system.md  architecture.md  async-patterns.md  color-tokens.md  data-model.md  game-loop-architecture.md  implementation-plan.md  skills-integration.md  tea-pattern.md  theme-design.md  ui-design.md  user-guide.md
src/: agent.rs  app.rs  cleanup.rs  config.rs  error.rs  git.rs  git_notes.rs  git_refs.rs  lib.rs  log.rs  main.rs  render.rs  session.rs  tmux.rs  ui.rs  util.rs
src/actors/: mod.rs  preview.rs  prompt.rs
src/core/: code_task.rs  dag.rs  mod.rs  task.rs
src/orchestration/: ai_human.rs  claude.rs  detection.rs  health.rs  mod.rs  planner.rs  pool.rs  resolver.rs  scheduler.rs  skills.rs
src/state/: manager.rs  migration.rs  mod.rs
src/tea/: command.rs  message.rs  mod.rs  model.rs  update.rs
src/workflow/: mod.rs  state.rs  types.rs
tests/integration/: conflict_resolution.rs  fixtures.rs  mod.rs  parallel_agents.rs  performance.rs  recovery.rs  workflow_e2e.rs
(+114 files in other folders)
