[package]
name = "zen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zen"
path = "src/main.rs"

[dependencies]
# TUI
# ratatui 0.30+ has major modular architecture changes; staying on 0.29.x for stability
ratatui = "0.29"
# crossterm 0.29 is the latest stable version
crossterm = { version = "0.29", features = ["event-stream"] }

# Async
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "sync", "time", "process", "fs", "macros"] }
# tokio-util: Using default features only (no "rt" needed).
# CancellationToken is in tokio_util::sync which requires no feature flags.
# We chose CancellationToken over alternatives because:
# - watch channel: Requires manual value checking after changed(), less ergonomic API
# - broadcast: Overhead of message passing, no hierarchical cancellation
# - AtomicBool + Notify: More boilerplate, no child token support
# CancellationToken provides: clean .cancelled() future, child tokens for hierarchical
# shutdown, cancel safety, and is the official Tokio ecosystem recommendation.
tokio-util = "0.7"
futures = "0.3"

# Git
git2 = "0.20"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"

# Concurrency
crossbeam-channel = "0.5"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4", "serde"] }
which = "8"
regex = "1"

# ANSI parsing
ansi-to-tui = "7"


[dev-dependencies]
tempfile = "3.24.0"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }
